# StablePay

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  perenapay3.md  tailwind.config.ts  vite.config.ts
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/anchor/: Anchor.toml  package-lock.json  package.json  tsconfig.json
backend/anchor/programs/perenapay/: Cargo.toml
backend/anchor/programs/perenapay/src/: lib.rs
backend/anchor/tests/: perenapay.ts
backend/src/: index.ts
backend/src/config/: index.ts
backend/src/controllers/: payment.controller.ts
backend/src/middleware/: auth.ts
backend/src/models/: merchant.ts  payment.ts
backend/src/routes/: payment.routes.ts
backend/src/services/: merchant.service.ts  payment.service.ts  perena.service.ts  solana.service.ts
backend/src/utils/: logger.ts
scripts/: push-to-github.sh
src/: App.tsx  index.css  main.tsx
src/components/: AdminPortal.tsx  CheckoutDemo.tsx  DashboardDemo.tsx  DigitalReceipt.tsx  FeatureCard.tsx  FlowsDemo.tsx  Footer.tsx  IntegrationSection.tsx  Navbar.tsx  PricingSection.tsx  StatCard.tsx  TestimonialCard.tsx
src/components/admin/: MerchantManagement.tsx  SystemMonitoring.tsx  UserManagement.tsx
src/components/flows/: CustomerPaymentFlow.tsx  MerchantOnboarding.tsx  TransactionMonitoringFlow.tsx  TreasuryManagementFlow.tsx
src/lib/: backend-api.ts
src/pages/: Admin.tsx  Dashboard.tsx  Flows.tsx  Index.tsx
src/providers/: SolanaWalletProvider.tsx  index.ts
src/types/: payment.ts
