[package]
name = "perenapay"
version = "0.1.0"
description = "Enterprise-grade stablecoin payment processor built on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "perenapay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
solana-program = "1.17.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }
thiserror = "1.0.57" 